Location (Address) dipindah ke Shared, bisa dipanggil dengan import SharedModule

--- a/src/app/modules/home/pages/home-layout/home-layout.component.html
+++ b/src/app/modules/home/pages/home-layout/home-layout.component.html
@@ -1,5 +1,5 @@
 <div class="home-container container">
-	<location-section></location-section>
+	<address-section></address-section>
 	<div class="white-space"></div>
 	<banner-section hidden></banner-section>
 
