--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
@@ -6,7 +6,7 @@
 		<div id="pilih-produk-container-2"
 			class="flex-grow-1">
 			<div class="white-space"></div>
-			<app-location-section></app-location-section>
+			<address-section></address-section>
 			<div class="white-space"></div>
 			<div id="label-total-produk">3411 produk <span id="choosen-produk">"sweather"</span> di semua Kategori
 			</div>
