--- a/src/app/layout/components/header-category-button/header-category-button.component.scss
+++ b/src/app/layout/components/header-category-button/header-category-button.component.scss
@@ -13,11 +13,13 @@
 	font-weight: normal;
 	font-size: 18px;
 	line-height: 25px;
+	cursor: pointer;
 }
 
 #headers-menubar {
 	height: 28px 28px;
 	margin-top:5px;
+	cursor: pointer;
 }
 
 .arrow-up {
