--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -19,6 +19,7 @@
 #headers-logo {
 	height: 39.02px;
 	width: 80.12px;
+	cursor: pointer;
 }
 
 .white-space-78px {
@@ -73,6 +74,7 @@
 	width: 30px;
 	height: 30px;
 	margin-right: 10px;
+	cursor: pointer;
 }
 
 #headers-username {
@@ -83,6 +85,7 @@
 	font-weight: normal;
 	line-height: 20px;
 	text-align: right;
+	cursor: pointer;
 }
 
 #headers-user-photo {
@@ -90,6 +93,7 @@
 	border-radius: 50%;
 	height: 55px;
 	width: 55px;
+	cursor: pointer;
 }
 
 .mat-form-field-appearance-legacy .mat-form-field-underline{
