Box Shadow di Menubar dan Card

--- a/src/app/layout/components/header-category-button/header-category-button.component.html
+++ b/src/app/layout/components/header-category-button/header-category-button.component.html
@@ -11,7 +11,8 @@
 		id="transparent-box">
 		<div class="white-space-top-10px"></div>
 		<div class="arrow-up"></div>
-		<div class="d-flex container-round">
+		<div class="d-flex container-round"
+			id="menubar-box">
 			<div id="catalog-kategori-container-1">
 				<div id="label-kategori">Kategori</div>
 				<div *ngFor="let category of categories">
