--- a/src/app/layout/components/header-category-button/header-category-button.component.scss
+++ b/src/app/layout/components/header-category-button/header-category-button.component.scss
@@ -49,6 +49,10 @@
 	height: 10px;
 }
 
+#menubar-box{
+	box-shadow: 7px 24px 35px -12px rgba(184,182,184,1);
+}
+
 #categori-column {
 	width: 100px;
 }
