--- a/src/app/shared/components/catalog-card/catalog-card.component.scss
+++ b/src/app/shared/components/catalog-card/catalog-card.component.scss
@@ -6,6 +6,10 @@
 	height: 290px;
 	width: 172px;
 	margin: 0px;
+	background: #FFFFFF;
+	mix-blend-mode: normal;
+	border-radius: 4px;
+	box-shadow: $box-shadow-card;
 }
 
 .inner-padding {
