--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -42,3 +42,20 @@ input[type='number']::-webkit-outer-spin-button {
 		max-width: 1280px;
 	}
 }
+
+.toast {
+	max-width: 400px;
+	overflow: hidden;
+	background-color: #fdfdfd;
+	border: 0px solid rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+	border-radius: 0px 0px 8px 8px;
+}
+
+.ngb-toasts {
+	position: fixed;
+	top: 72px !important;
+	right: 0;
+	margin: 0.5em;
+	z-index: 1200;
+}
