--- a/src/app/layout/components/footer-bar/footer-bar.component.scss
+++ b/src/app/layout/components/footer-bar/footer-bar.component.scss
@@ -6,6 +6,18 @@
 	border: 0.5px solid $abu-abu-aspal;
 }
 
+#kotakemail{
+	border: solid yellowgreen 0px;
+	width: 99px;
+	height: 99px;
+	position: fixed;
+	float: right;
+	top:75%;
+	right: 0%;
+	border-radius: 50%;
+	border:solid blue 0px;
+}
+
 #footer-logo {
 	width: 185.83px;
 	height: 86px;
