--- a/src/app/modules/home/pages/home-layout/home-layout.component.scss
+++ b/src/app/modules/home/pages/home-layout/home-layout.component.scss
@@ -6,4 +6,11 @@
 	height: 20px;
 }
 
-
+.justify-content-end{
+// justify-content: flex-end !important; 
+    position: fixed;
+    bottom: 250px;
+    float: right;
+    width: 25%;
+	left: 85%;
+}
