--- a/src/app/shared/components/address-section/address-section.component.html
+++ b/src/app/shared/components/address-section/address-section.component.html
@@ -1,4 +1,4 @@
-<div id="location-user">
+<div id="{{divnya}}">
 	<div id="location-user-detail">
 		Graha Boulevard, Jl. Boulevard Raya, RW.1, Kelapa Gading Timur...
 	</div>
