--- a/src/app/shared/components/address-section/address-section.component.scss
+++ b/src/app/shared/components/address-section/address-section.component.scss
@@ -1,7 +1,20 @@
 @import '../../../../styles/variables/colors';
 
-#location-user {
+#location-user-panjang {
 	width: 50%;
+	margin: auto;
+	color: white;
+	height: 50px;
+	position: relative;
+	border-radius: 20px;
+	background: url('../../../../assets/image/icons/location-icon.png')
+		#333132 no-repeat;
+	background-position: left 20px center;
+	background-size: 16px 25px;
+}
+
+#location-user-pendek {
+	width: 75%;
 	margin: auto;
 	color: white;
 	height: 50px;
