Update merge after error last night

--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -46,11 +46,11 @@
 }
 
 #mat-form-field{
-	width:100%;border:2px
+	width:100%;
 }
  
 #mat-autocomplete{
-	border:0px;
+	border:solid green 0px;height:0;
 }
 
 .textbox-header-search {
