--- a/src/app/layout/components/footer-bar/footer-bar.component.scss
+++ b/src/app/layout/components/footer-bar/footer-bar.component.scss
@@ -1,10 +1,11 @@
 @import '../../../../styles/variables/colors';
 
 #footer-bar-container {
-	margin-top: 90px;
+	// margin-top: 90px;
 	height: 200px;
 	background-color: $putih-tok;
-	border: 0.5px solid $abu-abu-aspal;
+	// border: 0.5px solid $abu-abu-aspal;
+	border: 0px;
 }
 
 #kotakemail{
@@ -13,10 +14,14 @@
 	height: 99px;
 	position: fixed;
 	float: right;
-	top:75%;
+	top:74%;
 	right: 0%;
 	border-radius: 50%;
 	border:solid blue 0px;
+}
+
+#kotakemail-hide{
+	display: none;
 }
 
 #footer-logo {
