Address Bar All Clickable with Border-Radius 8px, Relocates Email Button

--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -53,6 +53,10 @@
 	border:solid green 0px;height:0;
 }
 
+.mat-form-field-infix{
+	height:0px;
+}
+
 .textbox-header-search {
 	height: 40px;
 	width: 500px;
