--- a/src/app/shared/components/address-section/address-section.component.html
+++ b/src/app/shared/components/address-section/address-section.component.html
@@ -1,7 +1,7 @@
-<div id="{{divnya}}">
+<div id="{{divnya}}"
+	(click)="openDialogLocation()">
 	<div id="location-user-detail">
 		Graha Boulevard, Jl. Boulevard Raya, RW.1, Kelapa Gading Timur...
 	</div>
-	<div (click)="openDialogLocation()"
-		id="location-arrow"></div>
+	<div id="location-arrow"></div>
 </div>
