--- a/src/app/shared/components/address-section/address-section.component.scss
+++ b/src/app/shared/components/address-section/address-section.component.scss
@@ -6,11 +6,12 @@
 	color: white;
 	height: 50px;
 	position: relative;
-	border-radius: 20px;
+	border-radius: 8px;
 	background: url('../../../../assets/image/icons/location-icon.png')
 		#333132 no-repeat;
 	background-position: left 20px center;
 	background-size: 16px 25px;
+	cursor: pointer;
 }
 
 #location-user-pendek {
@@ -24,6 +25,7 @@
 		#333132 no-repeat;
 	background-position: left 20px center;
 	background-size: 16px 25px;
+	cursor: pointer;
 }
 
 #location-user-detail {
