--- a/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
+++ b/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
@@ -4,7 +4,7 @@
 	<div class="d-flex justify-content-center align-items-center">
 		<input type="text"
 			class="textbox-search-with-logo"
-			placeholder="Search">
+			placeholder="Cari Lokasi">
 	</div>
 	<div class="filter-card-underline"></div>
 	<div id="filter-label-2">Harga</div>
