--- a/src/app/layout/components/header-category-button/header-category-button.component.html
+++ b/src/app/layout/components/header-category-button/header-category-button.component.html
@@ -9,7 +9,8 @@
 		<div id="headers-kategori">Kategori</div>
 	</div>
 	<div ngbDropdownMenu
-		id="transparent-box">
+		id="transparent-box"
+		(mouseout)="myDrop.close();">
 		<div class="white-space-top-10px"></div>
 		<div class="arrow-up"></div>
 		<div class="d-flex container-round"
