--- a/src/app/layout/components/header-category-button/header-category-button.component.scss
+++ b/src/app/layout/components/header-category-button/header-category-button.component.scss
@@ -18,7 +18,7 @@
 
 #headers-menubar {
 	height: 28px 28px;
-	margin-top:5px;
+	margin-top: 5px;
 	cursor: pointer;
 }
 
@@ -49,8 +49,8 @@
 	height: 10px;
 }
 
-#menubar-box{
-	box-shadow: 7px 24px 35px -12px rgba(184,182,184,1);
+#menubar-box {
+	box-shadow: 7px 24px 35px -12px rgba(184, 182, 184, 1);
 }
 
 #categori-column {
@@ -109,7 +109,8 @@
 
 .list-sub-kategori {
 	cursor: pointer;
-	width: 193px;
+	width: 210px;
 	font-size: 12px;
 	margin-top: 20px;
+	padding-right: 30px;
 }
