--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.scss
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.scss
@@ -1,51 +1,65 @@
 @import '../../../../styles/variables/colors';
 
-#mbel{
-	width:90%;
-	height:auto;
+#mbel {
+	width: 90%;
+	height: auto;
 	background-color: white;
 	z-index: 9999;
 	border-radius: 30px;
 }
 
-#loc-header{
-	position:relative;width:100%;
+#loc-header {
+	position: relative;
+	width: 100%;
 	font-family: Raleway;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 24px;
 	line-height: 28px;
 	color: #606060;
-	padding-left:20px;font-weight: bold;margin-top:10px;height:25px;
+	padding-left: 20px;
+	font-weight: bold;
+	margin-top: 10px;
+	height: 25px;
 }
 
-#body_address_1{
-	width:100%;
-	font-family:Raleway;
+#body_address_1 {
+	width: 100%;
+	font-family: Raleway;
 	line-height: 25px;
 	font-weight: bold;
-	font-size:17px;
+	font-size: 17px;
 }
 
-#body_address_2{
-	width:100%;
+#body_address_2 {
+	width: 100%;
 	line-height: 22px;
-	font-size:14px;
+	font-size: 14px;
 }
 
-#loc-hr-top{
-	position:relative;width:100%;margin-left:20px;margin-top:25px;padding:10px;border-bottom: 1px solid #A9A9A9;
+#loc-hr-top {
+	position: relative;
+	width: 100%;
+	margin-left: 20px;
+	margin-top: 25px;
+	padding: 10px;
+	border-bottom: 1px solid #a9a9a9;
 }
 
-#loc-body{
-	position:relative;width:100%;padding:15px 10px 15px 25px;;font-weight: bold;margin-top:10px;height:auto;
+#loc-body {
+	position: relative;
+	width: 100%;
+	padding: 15px 10px 15px 25px;
+	font-weight: bold;
+	margin-top: 10px;
+	height: auto;
 }
 
-#loc-body-address{
-	position:relative;
+#loc-body-address {
+	position: relative;
 	float: left;
-	width:70%;
-	color:#606060;
+	width: 70%;
+	color: #606060;
 	font-family: Raleway;
 	font-style: normal;
 	font-weight: bold;
@@ -53,22 +67,29 @@
 	line-height: 22px;
 }
 
-#loc-body-manuver{
-	position:relative;float: left;width:30%;border:solid blue 0px;
+#loc-body-manuver {
+	position: relative;
+	float: left;
+	width: 30%;
+	border: solid blue 0px;
 }
 
-#loc-body-button{
-	position:relative;float:left;margin:0px;padding-left:10px;
+#loc-body-button {
+	position: relative;
+	float: left;
+	margin: 0px;
+	padding-left: 10px;
 }
 
-.button-location{
-	background-color: #F12627;
-	border:0px;
-	width: 89px;height: 28px;
-	padding:5px 15px 5px 15px;
+.button-location {
+	background-color: #f12627;
+	border: 0px;
+	width: 89px;
+	height: 28px;
+	padding: 5px 15px 5px 15px;
 	border-radius: 10px;
-	color:#ffffff;
-	font-size:14px;
+	color: #ffffff;
+	font-size: 14px;
 	border-radius: 10px;
 	font-family: Raleway;
 	font-style: normal;
@@ -79,14 +100,15 @@
 	text-align: center;
 }
 
-.button-location-kosong{
+.button-location-kosong {
 	background-color: transparent;
-	border:0px;
-	width: 89px;height: 28px;
-	padding:5px 15px 5px 15px;
+	border: 0px;
+	width: 89px;
+	height: 28px;
+	padding: 5px 15px 5px 15px;
 	border-radius: 10px;
-	color:#ffffff;
-	font-size:14px;
+	color: #ffffff;
+	font-size: 14px;
 	border-radius: 10px;
 	font-family: Raleway;
 	font-style: normal;
@@ -97,21 +119,35 @@
 	text-align: center;
 }
 
-
-#loc-body-checkbox{
-	position:relative;float:left;margin:0px;padding-left:30px;
+#loc-body-checkbox {
+	position: relative;
+	float: left;
+	margin: 0px;
+	padding-left: 30px;
 }
 
-#loc-hr-bottom{
-	position:relative;width:100%;margin-left:20px;padding:10px;border-bottom: 1px solid #A9A9A9;
+#loc-hr-bottom {
+	position: relative;
+	width: 100%;
+	margin-left: 20px;
+	padding: 10px;
+	border-bottom: 1px solid #a9a9a9;
 }
 
-#loc-bottom{
-	position:relative;width:100%;margin-left:20px;text-align: center;
-	padding-top:20px;color:#F12627;float:left;margin-top:20px;
-	font-family:OpenSans;font-weight: bold;line-height: 19px;font-size:16px;
+#loc-bottom {
+	position: relative;
+	width: 100%;
+	margin-left: 20px;
+	text-align: center;
+	padding-top: 20px;
+	color: #f12627;
+	float: left;
+	margin-top: 20px;
+	font-family: OpenSans;
+	font-weight: bold;
+	line-height: 19px;
+	font-size: 16px;
 }
-
 
 .radiyo {
 	display: block;
@@ -122,55 +158,59 @@
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	height:25px;
-  }
-  
-  /* Hide the browser's default radio button */
-  .radiyo input {
+	height: 25px;
+}
+
+/* Hide the browser's default radio button */
+.radiyo input {
 	position: absolute;
 	opacity: 0;
 	cursor: pointer;
-  }
-  
-  /* Create a custom radio button */
-  .checkmark {
+}
+
+/* Create a custom radio button */
+.checkmark {
 	position: absolute;
 	top: 0;
 	left: 0;
 	height: 25px;
 	width: 25px;
-	background-color: #eee;
+	background-color: #ffffff;
+	border: 1px solid #f12627;
 	border-radius: 50%;
-  }
-  
-  /* On mouse-over, add a grey background color */
-  .radiyo:hover input ~ .checkmark {
-	background-color: #ccc;
-  }
-  
-  /* When the radio button is checked, add a blue background */
-  .radiyo input:checked ~ .checkmark {
-	background-color: #F12627;
-  }
-  
-  /* Create the indicator (the dot/circle - hidden when not checked) */
-  .checkmark:after {
-	content: "";
+}
+
+/* On mouse-over, add a grey background color */
+.radiyo:hover input ~ .checkmark {
+	background-color: #ffffff;
+	border: 1px solid #f12627;
+	border-radius: 50%;
+}
+
+/* When the radio button is checked, add a blue background */
+.radiyo input:checked ~ .checkmark {
+	background-color: #ffffff;
+	border: 1px solid #f12627;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+	content: '';
 	position: absolute;
 	display: none;
-  }
-  
-  /* Show the indicator (dot/circle) when checked */
-  .radiyo input:checked ~ .checkmark:after {
+}
+
+/* Show the indicator (dot/circle) when checked */
+.radiyo input:checked ~ .checkmark:after {
+	top: 3.1px;
+	left: 3.05px;
 	display: block;
-  }
-  
-  /* Style the indicator (dot/circle) */
-  .radiyo .checkmark:after {
-	   top: 9px;
-	  left: 9px;
-	  width: 8px;
-	  height: 8px;
-	  border-radius: 50%;
-	  background: white;
-  }
+	background-color: #f12627;
+	width: 17px;
+	height: 17px;
+}
+
+/* Style the indicator (dot/circle) */
+.radiyo .checkmark:after {
+	border-radius: 50%;
+}
