--- a/src/app/shared/components/catalog-card-button/catalog-card-button.component.html
+++ b/src/app/shared/components/catalog-card-button/catalog-card-button.component.html
@@ -12,18 +12,24 @@
 </div>
 <ng-template #elseBlock>
 	<div class="d-flex justify-content-between align-items-center control-wrapper">
-		<img id="remove_cart_logo"
-			src="../../../../../assets/image/icons/remove_card_ic.png"
+		<div id="remove_cart_logo_wrapper"
+			class="d-flex align-items-center"
 			(click)="removeFromCart(dangerTpl)">
+			<img id="remove_cart_logo"
+				src="../../../../../assets/image/icons/remove_card_ic.png">
+		</div>
+
 		<input #qty_input
 			id="qty_input"
 			class="p-2"
 			[(ngModel)]="qty"
 			type="number"
 			(change)="qtyChange()">
-		<img id="add_to_cart_logo"
-			src="../../../../../assets/image/icons/add_to_cart_ic.png"
+		<div id="remove_cart_logo_wrapper"
+			class="d-flex align-items-center"
 			(click)="addToCart(dangerTpl)">
+			<img id="add_to_cart_logo"
+				src="../../../../../assets/image/icons/add_to_cart_ic.png"></div>
 	</div>
 
 </ng-template>
