--- a/src/app/shared/components/catalog-card-button/catalog-card-button.component.scss
+++ b/src/app/shared/components/catalog-card-button/catalog-card-button.component.scss
@@ -24,6 +24,12 @@
 	font-family: Raleway;
 }
 
+#remove_cart_logo_wrapper {
+	width: 22px;
+	height: 16px;
+	cursor: pointer;
+}
+
 #remove_cart_logo {
 	width: 16px;
 	height: 4px;
