--- a/src/app/modules/home/components/catalog-section/catalog-section.component.html
+++ b/src/app/modules/home/components/catalog-section/catalog-section.component.html
@@ -3,6 +3,7 @@
 		<div id="catalog-section-label">Baju Pria</div>
 		<div id="catalog-section-lihat-semua">Lihat Semua</div>
 	</div>
+	<div class="white-space"></div>
 	<div class="d-flex">
 
 		<catalog-card></catalog-card>
