--- a/src/app/shared/components/catalog-card/catalog-card.component.html
+++ b/src/app/shared/components/catalog-card/catalog-card.component.html
@@ -6,5 +6,6 @@
 
 		<div class="catalog-card-price">Rp359.000</div>
 	</div>
-	<catalog-card-button class="catalog-card-button"></catalog-card-button>
+	<catalog-card-button *ngIf="false"
+		class="catalog-card-button"></catalog-card-button>
 </div>
