--- a/src/app/shared/components/catalog-card-button/catalog-card-button.component.scss
+++ b/src/app/shared/components/catalog-card-button/catalog-card-button.component.scss
@@ -1,7 +1,9 @@
 @import '../../../../styles/variables/colors';
 
+@import '../../../../styles/variables/fonts';
+
 .rounded_red_button {
-	background: #db0a2a;
+	background: $color-primary;
 	border-radius: 0px 0px 4px 4px;
 	height: 34px;
 	padding-top: 5px;
@@ -21,7 +23,7 @@
 	color: $font-color-dark-bg;
 	font-weight: bold;
 	font-size: 12.738px;
-	font-family: Raleway;
+	font-family: $secondary-font;
 	cursor: pointer;
 }
 
@@ -64,18 +66,18 @@
 }
 
 #keranjang-label {
-	font-family: Raleway;
+	font-family: $secondary-font;
 	font-weight: bolder;
 	font-size: 16px;
 }
 
 #lihat-keranjang-label {
-	font-family: Raleway;
+	font-family: $secondary-font;
 	font-weight: bold;
 	font-size: 16px;
 	width: 130px;
 	height: 32px;
-	background: #f12627;
+	background: $color-primary;
 	color: #dedede;
 	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
 	border-radius: 8px;
@@ -101,7 +103,7 @@
 }
 
 #item-name {
-	font-family: Raleway;
+	font-family: $secondary-font;
 	font-style: bold;
 	font-weight: 800;
 	font-size: 16px;
@@ -112,7 +114,7 @@
 }
 
 #item-info {
-	font-family: OpenSans;
+	font-family: $primary-font;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 12px;
@@ -121,11 +123,11 @@
 }
 
 #item-price {
-	font-family: OpenSans;
+	font-family: $primary-font;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 14px;
 	line-height: 14px;
 
-	color: #f12627;
+	color: $color-primary;
 }
