--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.scss
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.scss
@@ -1,5 +1,5 @@
 @import '../../../../styles/variables/colors';
-
+@import '../../../../styles/variables/fonts';
 #mbel {
 	width: 90%;
 	height: auto;
@@ -11,7 +11,7 @@
 #loc-header {
 	position: relative;
 	width: 100%;
-	font-family: Raleway;
+	font-family: $secondary-font;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 24px;
@@ -25,7 +25,7 @@
 
 #body_address_1 {
 	width: 100%;
-	font-family: Raleway;
+	font-family: $secondary-font;
 	line-height: 25px;
 	font-weight: bold;
 	font-size: 17px;
@@ -60,7 +60,7 @@
 	float: left;
 	width: 70%;
 	color: #606060;
-	font-family: Raleway;
+	font-family: $secondary-font;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 15px;
@@ -82,7 +82,7 @@
 }
 
 .button-location {
-	background-color: #f12627;
+	background-color: $color-primary;
 	border: 0px;
 	width: 89px;
 	height: 28px;
@@ -91,7 +91,7 @@
 	color: #ffffff;
 	font-size: 14px;
 	border-radius: 10px;
-	font-family: Raleway;
+	font-family: $secondary-font;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 16px;
@@ -110,7 +110,7 @@
 	color: #ffffff;
 	font-size: 14px;
 	border-radius: 10px;
-	font-family: Raleway;
+	font-family: $secondary-font;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 16px;
@@ -140,10 +140,10 @@
 	margin-left: 20px;
 	text-align: center;
 	padding-top: 20px;
-	color: #f12627;
+	color: $color-primary;
 	float: left;
 	margin-top: 20px;
-	font-family: OpenSans;
+	font-family: $primary-font;
 	font-weight: bold;
 	line-height: 19px;
 	font-size: 16px;
@@ -176,21 +176,21 @@
 	height: 25px;
 	width: 25px;
 	background-color: #ffffff;
-	border: 1px solid #f12627;
+	border: 1px solid $color-primary;
 	border-radius: 50%;
 }
 
 /* On mouse-over, add a grey background color */
 .radiyo:hover input ~ .checkmark {
 	background-color: #ffffff;
-	border: 1px solid #f12627;
+	border: 1px solid $color-primary;
 	border-radius: 50%;
 }
 
 /* When the radio button is checked, add a blue background */
 .radiyo input:checked ~ .checkmark {
 	background-color: #ffffff;
-	border: 1px solid #f12627;
+	border: 1px solid $color-primary;
 }
 
 /* Create the indicator (the dot/circle - hidden when not checked) */
@@ -205,7 +205,7 @@
 	top: 3.1px;
 	left: 3.05px;
 	display: block;
-	background-color: #f12627;
+	background-color: $color-primary;
 	width: 17px;
 	height: 17px;
 }
