--- a/src/app/shared/components/catalog-card/catalog-card.component.html
+++ b/src/app/shared/components/catalog-card/catalog-card.component.html
@@ -1,4 +1,5 @@
-<div class="card white-rounded-rectangle">
+<div class="card white-rounded-rectangle"
+	(click)="backToHome()">
 	<div class="inner-padding">
 		<img src="https://rossellafashion.files.wordpress.com/2012/04/baju.jpg"
 			class="card-img-top">
