--- a/src/app/modules/detail-product/components/image-price-section/image-price-section.component.html
+++ b/src/app/modules/detail-product/components/image-price-section/image-price-section.component.html
@@ -1,3 +1,5 @@
-<div class="rounded-container">
+<div class="rounded-container d-flex">
 	<image-main></image-main>
+	<wsh wide="20px"></wsh>
+	<price></price>
 </div>
