harga sesudah diskon

--- a/src/app/modules/detail-product/components/price/price.component.html
+++ b/src/app/modules/detail-product/components/price/price.component.html
@@ -1,3 +1,5 @@
 <div>
 	<div id="product-detail-label">Sweater Merah</div>
+	<wsv wide="29.33px"></wsv>
+	<discount-harga-coret></discount-harga-coret>
 </div>
