--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.scss
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.scss
@@ -79,6 +79,15 @@
 	float: left;
 	margin: 0px;
 	padding-left: 10px;
+	width:45%;
+}
+
+#loc-body-button-unchecked {
+	position: relative;
+	float: left;
+	margin: 0px;
+	padding-left: 10px;
+	width:45%;
 }
 
 .button-location {
