--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
@@ -1,55 +1,44 @@
 <div id="mbel">
 	<div id="loc-header">Alamat
 	</div>
-	<div id="loc-hr-top">
-	</div>
-	<div id="loc-body">
-		<div id="body_address_1">Narindo</div>
 
-		<div id="loc-body-address">
-			<div id="body_address_2">JL. Boulevard Raya Graha Boulevard C-12 Kelapa Gading timur Rt.10 rw.15 Jakarta
-				Utara 14240</div>
+	<div *ngFor="let items of datalocation; let i = index">
+		<div id="loc-hr-top">
 		</div>
-		<div id="loc-body-manuver">
-			<div id="loc-body-button">
-				<span class="button-location">Utama</span>
+		<div id="loc-body">
+			<div id="body_address_1">{{items.address_name}}</div>
+
+			<div id="loc-body-address">
+				<div id="body_address_2">{{items.address}}</div>
 			</div>
-			<div id="loc-body-checkbox">
+			<div id="loc-body-manuver">
+				<ng-template *ngIf="items.checked=='checked';then checkedaddress else uncheckedaddress"></ng-template>
+				<ng-template #checkedaddress>
+					<div id="loc-body-button">
+						<span class="button-location">{{items.address_utama}}</span>
+					</div>
+				</ng-template>
+				<ng-template #uncheckedaddress>
+					<div id="loc-body-button-unchecked">&nbsp;
+					</div>
+				</ng-template>
 
-				<label class="radiyo">
-					<input type="radio"
-						checked="checked"
-						name="radio">
-					<span class="checkmark"></span>
-				</label>
 
-			</div>
-		</div>
-	</div>
+				<div id="loc-body-checkbox">
 
-	<div id="loc-hr-top"></div>
-	<div id="loc-body">
-		<div id="body_address_1">Narindo</div>
+					<label class="radiyo">
+						<input type="radio"
+							checked="{{items.checked}}"
+							name="radio">
+						<span class="checkmark"></span>
+					</label>
 
-		<div id="loc-body-address">
-			<div id="body_address_2">JL. Boulevard Raya Graha Boulevard C-12 Kelapa Gading timur Rt.10 rw.15 Jakarta
-				Utara 14240</div>
-		</div>
-		<div id="loc-body-manuver">
-			<div id="loc-body-button">
-				<span class="button-location-kosong">Utama</span>
-			</div>
-			<div id="loc-body-checkbox">
-
-				<label class="radiyo">
-					<input type="radio"
-						name="radio">
-					<span class="checkmark"></span>
-				</label>
-
+				</div>
 			</div>
 		</div>
 	</div>
+
+
 
 	<div id="loc-hr-top"></div>
 
