--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -1,4 +1,4 @@
-$kresek-merah: #f12627;
+$kresek-merah: #DB0A2A;
 $merah-tua-darah: #ab121c;
 $merah-root-beat: #db0a2a;
 $hitam-tok: #000000;
@@ -15,6 +15,7 @@ $abu-abu-gelap: #606060;
 $abu-abu-gelap-muda: #757575;
 $abu-abu-sesuatu: #a9a9a9;
 $abu-abu-sesuatu-2: #a6a6a6;
+$merah-terang: #F12627;
 
 $color-primary: $kresek-merah;
 $font-color-light-bg: $hitam-tok;
