des-spe-section

--- a/src/app/modules/detail-product/pages/detail-product-layout/detail-product-layout.component.html
+++ b/src/app/modules/detail-product/pages/detail-product-layout/detail-product-layout.component.html
@@ -1,3 +1,5 @@
 <div class="container">
 	<image-price-section></image-price-section>
+	<wsv wide='23px'></wsv>
+	<deskripsi-spesifikasi-section></deskripsi-spesifikasi-section>
 </div>
