Footer, Footer-Feature, Footer-button, Footer-CustomerSupport dipindah ke Shared

--- a/src/app/modules/home/pages/home-layout/home-layout.component.html
+++ b/src/app/modules/home/pages/home-layout/home-layout.component.html
@@ -10,4 +10,11 @@
 	<catalog-section></catalog-section>
 
 	<br />
+
+</div>
+
+<div class="footer">
+	<footer-bar></footer-bar>
+	<footer></footer>
+
 </div>
