--- a/src/app/shared/components/footer-bar/footer-bar.component.scss
+++ b/src/app/shared/components/footer-bar/footer-bar.component.scss
@@ -5,7 +5,8 @@
 	height: 200px;
 	background-color: $putih-tok;
 	// border: 0.5px solid $abu-abu-aspal;
-	border: 0px;
+	box-shadow: 0px -1px 7px -2px rgba(0,0,0,0.4);
+	margin-top:2px;
 }
 
 #kotakemail{
