--- a/src/app/modules/detail-product/pages/detail-product-layout/detail-product-layout.component.html
+++ b/src/app/modules/detail-product/pages/detail-product-layout/detail-product-layout.component.html
@@ -5,4 +5,5 @@
 	<image-price-section></image-price-section>
 	<wsv wide='23px'></wsv>
 	<deskripsi-spesifikasi-section></deskripsi-spesifikasi-section>
+	<wsv wide='80px'></wsv>
 </div>
