update image grid selection detail produk

--- a/src/app/modules/detail-product/components/image-main/image-main.component.html
+++ b/src/app/modules/detail-product/components/image-main/image-main.component.html
@@ -1,2 +1,10 @@
-<img id="detail-main-image"
-	src="https://rossellafashion.files.wordpress.com/2012/04/baju.jpg">
+<div>
+	<div id="image-main">
+		<img id="detail-main-image"
+			src="https://s2.bukalapak.com/img/24267287201/large/Cottonology_Wells_Black.jpg">
+	</div>
+	<wsv wide="10px"></wsv>
+	<div id="image-grid">
+		<image-grid></image-grid>
+	</div>
+</div>
