--- a/src/app/modules/detail-product/components/image-grid/image-grid.component.scss
+++ b/src/app/modules/detail-product/components/image-grid/image-grid.component.scss
@@ -4,7 +4,16 @@
 	border-radius: 10%;
 	border: 0.5px solid #A9A9A9;
 	box-sizing: border-box;
+	cursor: pointer;
+}
 
+.div-grid-selected {
+	width: 76px;
+	height: 50px;
+	border-radius: 10%;
+	border: 2px solid #A9A9A9;
+	box-sizing: border-box;
+	cursor: pointer;
 }
 
 .image-grid {
