--- a/src/app/modules/detail-product/components/floating-footer/floating-footer.component.html
+++ b/src/app/modules/detail-product/components/floating-footer/floating-footer.component.html
@@ -3,8 +3,8 @@
 	<div>
 		<div id="review-foot">Sweater Merah</div>
 		<div id="amount-foot">
-			<div style="margin-top:-10px;position:relative;font-size: 15px;">Total</div>
-			<div style="margin-top:-5px;position:relative;">Rp. 718.000</div>
+			<div class="right-top-footer">Total</div>
+			<div class="right-bottom-footer">Rp. 718.000</div>
 		</div>
 	</div>
 </div>
