--- a/src/app/modules/detail-product/components/floating-footer/floating-footer.component.scss
+++ b/src/app/modules/detail-product/components/floating-footer/floating-footer.component.scss
@@ -34,3 +34,11 @@
 	text-align: right;
 	font-weight: bold;
 }
+
+.right-top-footer{
+	margin-top:-10px;position:relative;font-size: 15px;
+}
+
+.right-bottom-footer{
+	margin-top:-5px;position:relative;
+}
