Address Location with stylesObj

--- a/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
@@ -1,4 +1,9 @@
 <div class="container">
 	<wsv wide="53px"></wsv>
 	<div id="keranjang-label">KERANJANG</div>
+	<wsv wide="25px"></wsv>
+	<address-section wide="50%"
+		borderRadius='20px'
+		margin="0px">
+	</address-section>
 </div>
