--- a/src/styles/variables/_fonts.scss
+++ b/src/styles/variables/_fonts.scss
@@ -1,2 +1,5 @@
 $primary-font: OpenSans;
-$secondary-font: Raleway;
+$secondary-font: OpenSans;
+
+/* Diganti per 23 Juli 2020 */
+/* $secondary-font: Raleway; */
