--- a/src/app/shared/components/address-section/address-section.component.html
+++ b/src/app/shared/components/address-section/address-section.component.html
@@ -1,7 +1,8 @@
 <div id="{{divnya}}"
+	[ngStyle]="stylesObj"
 	(click)="openDialogLocation()">
 	<div id="location-user-detail">
-		Graha Boulevard, Jl. Boulevard Raya, RW.1, Kelapa Gading Timur...
+		{{location}}
 	</div>
 	<div id="location-arrow"></div>
 </div>
