--- a/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
@@ -1,4 +1,6 @@
 <div class="container">
 	<wsv wide="53px"></wsv>
 	<div id="keranjang-label">KERANJANG</div>
+	<wsv wide="53px"></wsv>
+	<cart-empty></cart-empty>
 </div>
