--- a/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
@@ -6,4 +6,8 @@
 		borderRadius='20px'
 		margin="0px">
 	</address-section>
+
+	<wsv wide="60px"></wsv>
+	<cart-item-list></cart-item-list>
+
 </div>
