--- a/src/app/modules/detail-product/components/floating-footer/floating-footer.component.scss
+++ b/src/app/modules/detail-product/components/floating-footer/floating-footer.component.scss
@@ -2,12 +2,15 @@
 @import '../../../../../styles/variables/fonts';
 
 #float-foot{
-	position: relative;
+	position: fixed;
+	bottom: 0%;
 	float: left;
 	width: 100%;
 	height: 88px;	
-	background: #FFFEFE;
+	background: $color-primary;
 	box-shadow: 10px 0px 30px rgba(0, 0, 0, 0.1);
+	clear: both;
+    margin-top: 0px;
 }
 
 #review-foot{
@@ -16,10 +19,11 @@
 	left: 8%;
 	font-style: normal;
 	font-weight: 500;
-	font-size: 25px;
-	font-family: $secondary-font;
-	color: $abu-abu-gelap;
+	font-size: 18px;
+	font-family: $primary-font;
+	color: $putih-tok;
 	width: 45%;
+	padding-top:5px;
 }
 
 #amount-foot{
@@ -27,16 +31,17 @@
 	float: right;
 	padding-right: 10%;
 	font-style: normal;
-	font-weight: 500;
-	font-size: 25px;
-	font-family: $secondary-font;
-	color: $abu-abu-gelap;
+	font-weight: bold;
+	font-family: $primary-font;
+	color: $putih-tok;
 	text-align: right;
 	font-weight: bold;
+	font-size: 20px;
+	line-height: 27px;padding-top:5px;
 }
 
 .right-top-footer{
-	margin-top:-10px;position:relative;font-size: 15px;
+	margin-top:-10px;position:relative;font-size: 14px;line-height: 19px;padding-top:5px;
 }
 
 .right-bottom-footer{
