--- a/src/app/modules/detail-product/components/price/price.component.html
+++ b/src/app/modules/detail-product/components/price/price.component.html
@@ -11,7 +11,7 @@
 		<span class="info-row-content">2.400gr</span>
 	</info-row>
 	<wsv wide="18px"></wsv>
-	<info-row title="Stok">
+	<info-row title="Stok">&nbsp;&nbsp;
 		<span class="info-row-content">25</span>
 	</info-row>
 	<wsv wide="61px"></wsv>
