Revisi Ijul - Header (Size Font)

--- a/src/app/layout/components/header-category-button/header-category-button.component.scss
+++ b/src/app/layout/components/header-category-button/header-category-button.component.scss
@@ -11,10 +11,10 @@
 	border: 0px;
 	font-family: $primary-font;
 	font-style: normal;
-	font-weight: normal;
-	font-size: 18px;
-	line-height: 25px;
 	cursor: pointer;
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 19px;
 }
 
 #headers-menubar {
@@ -113,5 +113,5 @@
 	width: 210px;
 	font-size: 12px;
 	margin-top: 20px;
-	padding-right: 30px;
+	padding-right: 33px;
 }
