--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -117,14 +117,15 @@
 }
 
 #headers-username {
-	font-size: 18px;
+
 	margin-right: 10px;
 	font-family: $primary-font;
-	font-style: normal;
-	font-weight: normal;
-	line-height: 20px;
 	text-align: right;
 	cursor: pointer;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 24px;
 }
 
 #headers-user-photo {
