--- a/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
+++ b/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
@@ -1,1 +1,5 @@
-<p>request-approval-layout works!</p>
+<div class="container">
+	<wsv wide="53px"></wsv>
+	<div id="request-approval-label">REQUEST APPROVAL</div>
+
+</div>
