--- a/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
+++ b/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
@@ -1,5 +1,6 @@
 <div class="container">
 	<wsv wide="53px"></wsv>
 	<div id="request-approval-label">REQUEST APPROVAL</div>
+	<wsv wide="23px"></wsv>
 
 </div>
