--- a/src/app/shared/components/cart-item-list/cart-item-list.component.html
+++ b/src/app/shared/components/cart-item-list/cart-item-list.component.html
@@ -1,12 +1,14 @@
 <div id="item-list"
 	class="d-flex">
 	<div id="item-list-left">
-		<div id="item-list-image"><img src="{{items.itemImage}}"
-				id="item-image"></div>
+		<div id="item-list-image"><a (click)="goToDetail()"
+				class="redirectdetail"><img src="{{items.itemImage}}"
+					id="item-image"></a></div>
 	</div>
 	<div id="item-list-right"
 		class="flex-grow-1">
-		<div id="item-list-name">{{items.itemName}}</div>
+		<div id="item-list-name"><a class="redirectdetail"
+				(click)="goToDetail()">{{items.itemName}}</a></div>
 		<div id="item-list-price">{{items.itemPrice}}</div>
 		<div id="item-list-color">
 			<div id="rounded-item-wording">Warna</div>
