--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -56,7 +56,8 @@
 		<div class="white-space-110px"></div>
 		<div class="ml-auto d-flex align-items-center">
 			<img id="headers-cart"
-				src="../../../../assets/image/icons/cart-logo.png">
+				src="../../../../assets/image/icons/cart-logo.png"
+				(click)="goToCart()">
 
 
 			<div id="headers-username">
