--- a/src/app/modules/home/components/catalog-section/catalog-section.component.scss
+++ b/src/app/modules/home/components/catalog-section/catalog-section.component.scss
@@ -6,18 +6,17 @@
 	font-family: $secondary-font;
 	font-style: normal;
 	font-weight: bold;
-	font-size: 24px;
-	line-height: 28px;
+	font-size: 16px;
+	line-height: 22px;
 }
 
 #catalog-section-lihat-semua {
 	color: $color-primary;
 	font-family: $secondary-font;
 	font-style: normal;
-	font-weight: bold;
-	font-size: 16px;
+	font-weight: 600;
+	font-size: 14px;
 	line-height: 19px;
-	text-align: right;
 }
 
 .white-space-18px-horizontal {
