--- a/src/app/shared/components/catalog-card/catalog-card.component.html
+++ b/src/app/shared/components/catalog-card/catalog-card.component.html
@@ -5,7 +5,7 @@
 			class="card-img-top">
 		<div class="catalog-card-label">Sweater Merah Pria</div>
 
-		<div class="catalog-card-price">Rp359.000</div>
+		<div class="catalog-card-price">Rp. 359.000</div>
 	</div>
 	<catalog-card-button *ngIf="false"
 		class="catalog-card-button"></catalog-card-button>
