--- a/src/app/shared/components/cart-item-list/cart-item-list.component.html
+++ b/src/app/shared/components/cart-item-list/cart-item-list.component.html
@@ -1,11 +1,10 @@
 <div id="item-list"
-	class="d-flex">
-	<div id="item-list-left">
-		<div id="item-list-image"><img src="{{items.itemImage}}"
-				id="item-image"></div>
-	</div>
-	<div id="item-list-right"
-		class="flex-grow-1">
+	class="d-flex align-items-center">
+
+	<div id="item-image"><img src="{{items.itemImage}}"
+			id="item-image"></div>
+
+	<div class="flex-grow-1">
 		<div id="item-list-name">{{items.itemName}}</div>
 		<div id="item-list-price">{{items.itemPrice}}</div>
 		<div id="item-list-color">
