--- a/src/app/modules/cart/components/item-list/item-list.component.html
+++ b/src/app/modules/cart/components/item-list/item-list.component.html
@@ -6,17 +6,17 @@
 <wsv wide="16px"></wsv>
 <div *ngFor="let item of items">
 	<div
-		[className]="allowChanges? 'white-rounded-corner-item-list-cart out-of-stock' : 'white-rounded-corner-item-list-cart'">
+		[className]="item.outOfStock? 'white-rounded-corner-item-list-cart out-of-stock' : 'white-rounded-corner-item-list-cart'">
 		<div class="d-flex align-items-center">
-			<check-box-round checked="false"
-				allowChanges="false"></check-box-round>
+			<check-box-round [checked]="!item.outOfStock"
+				[allowChanges]="!item.outOfStock"></check-box-round>
 			<wsh wide="16px"></wsh>
 			<cart-item-list></cart-item-list>
 		</div>
 		<div class="d-flex align-items-center">
 			<wsh wide="235px"></wsh>
 			<qty-ctrl notif="false"
-				allowChanges="true"></qty-ctrl>
+				[allowChanges]="!item.outOfStock"></qty-ctrl>
 			<wsh wide="250px"></wsh>
 			<img id="trash-can"
 				src="../../../../../assets/image/icons/trash_can.png" />
