--- a/src/app/shared/components/cart-item-list/cart-item-list.component.scss
+++ b/src/app/shared/components/cart-item-list/cart-item-list.component.scss
@@ -1,18 +1,16 @@
 @import '../../../../styles/variables/colors';
 @import '../../../../styles/variables/fonts';
 
-#item-list-left {
-	position: relative;
-	float: left;
-	width: 30%;
-	height: 173px;
+#item-image {
+	height: 117px;
+	width: 180px;
+	object-fit: cover;
 }
 
 #item-list-right {
 	position: relative;
 	float: left;
-	width: 70%;
-	height: 173px;
+	height: 140px;
 }
 
 #item-list-image {
@@ -20,11 +18,6 @@
 	height: 95%;
 	position: relative;
 	padding: 10px 0px 0px 10px;
-}
-
-#item-image {
-	height: 95%;
-	object-fit: cover;
 }
 
 #item-list-name {
