Address Request Approval

--- a/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
+++ b/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
@@ -2,5 +2,5 @@
 	<wsv wide="53px"></wsv>
 	<div id="request-approval-label">REQUEST APPROVAL</div>
 	<wsv wide="23px"></wsv>
-
+	<request-approval-address></request-approval-address>
 </div>
