route to request approval

--- a/src/app/shared/components/box-cart-price/box-cart-price.component.html
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.html
@@ -55,5 +55,6 @@
 	<wsv wide="19px"></wsv>
 
 	<button type="button"
-		class="btn btn-price-next">{{buttonLabel}}</button>
+		class="btn btn-price-next"
+		(click)="clickButtonLabel()">{{buttonLabel}}</button>
 </div>
