--- a/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart/pages/cart-layout/cart-layout.component.html
@@ -3,7 +3,7 @@
 	<div id="keranjang-label">KERANJANG</div>
 	<wsv wide="53px"></wsv>
 	<!--<cart-empty></cart-empty>-->
-	<box-cart-price></box-cart-price>
+	<box-cart-price wide="50%"></box-cart-price>
 	<wsv wide="25px"></wsv>
 	<address-section wide="50%"
 		borderRadius='20px'
